# Chorsatz

./: Cargo.toml  README.md  index.html  rust-toolchain.toml
.github/workflows/: continuous-deployment.yml  rust.yml
docs/: app-26935192e837530d.css  app-869b0570e8c4c821.css  app-f4fd40b0a61ec9d.css  chorsatz-4656bb46a6ee1094.js  chorsatz-4656bb46a6ee1094_bg.wasm  chorsatz-471068835c84ea24.js  chorsatz-471068835c84ea24_bg.wasm  chorsatz-59ffc9203cb504d0.js  chorsatz-59ffc9203cb504d0_bg.wasm  chorsatz-60d976085ab71a3f.js  chorsatz-60d976085ab71a3f_bg.wasm  chorsatz-b6e4438f652747d1.js  chorsatz-b6e4438f652747d1_bg.wasm  chorsatz-d872fca0bcb251d.js  chorsatz-d872fca0bcb251d_bg.wasm  chorsatz-db10e600865091a.js  chorsatz-db10e600865091a_bg.wasm  chorsatz-e2fe0405123669a0.js  index.html
howto/: Akkordsatzprogramm.tex  Chorsatz.tex
src/: app.rs  fetcher.rs  generator.rs  main.rs  mod.rs  notes.rs  options.rs  scale.rs
src/app/: app.css  audio_sys.rs  fetcher.rs  note_info.rs  options.rs  result_view.rs  svg.rs
src/app/asset_temp/: HowTo.txt  midicreator.py
src/app/asset_temp/midis/: a2.sheet.mid  a3.sheet.mid  a4.sheet.mid  a5.sheet.mid  as2.sheet.mid  as3.sheet.mid  as4.sheet.mid  as5.sheet.mid  b2.sheet.mid  b3.sheet.mid  b4.sheet.mid  b5.sheet.mid  (+36 more)
src/app/languages/: mod.rs
src/logic/: config.rs  generator.rs  mod.rs  scale.rs
src/logic/notes/: chor_error.rs  mod.rs  multinotes.rs  multinotes_german.rs  note_names.rs  octaved_notes.rs  satb_block.rs  satb_template.rs
src/notes/: mod.rs  multinotes.rs  note_names.rs  octaved_notes.rs  triads.rs
(+48 files in other folders)
