[package]
name = "chorsatz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
log = "0.4"
simple_logger = "4.2"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
hum = "0.6"

# Web

leptos = { version = "0.5.0-rc3", features = ["csr", "nightly"] }