[package]
name = "chorsatz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic rust
itertools = "0.11"
log = "0.4"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
hum = "0.6"
# web stuff
leptos = { version = "0.5.0-rc3", features = ["csr", "nightly"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.4", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'AudioContext',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'Response',
]}
wasm-bindgen-futures = "0.4.27"
# futures
futures = {version = "0.3.30", features = ["thread-pool"]}
reqwasm = "0.5"
